--- a/server/config.ini
+++ b/server/config.ini
@@ -1,5 +1,5 @@
-account=yuchting@gmail.com
-password=superman@@@
+account=yuchberry@gmail.com
+password=krMpyfGakA7MRIvh42m9
 
 protocol=imaps
 host=imap.google.com
