--- a/server/config.ini
+++ b/server/config.ini
@@ -1,8 +1,8 @@
-account=yuchberry@gmail.com
+account=yuchberry
 password=krMpyfGakA7MRIvh42m9
 
 protocol=imaps
-host=imap.google.com
+host=imap.googlemail.com
 port=993
 
 userPassword=111111
