--- a/server/config.ini
+++ b/server/config.ini
@@ -5,7 +5,11 @@ protocol=imaps
 host=imap.googlemail.com
 port=993
 
+protocol_send=smtp
+host_send=smtp.googlemail.com
+port_send=465
+
 userPassword=111111
-userReadIndex=-1
+userFetchIndex=1
 
 pushInterval=10
