--- a/server/config.ini
+++ b/server/config.ini
@@ -1,15 +1,13 @@
-account=yuchberry
-password=krMpyfGakA7MRIvh42m9
-
-protocol=imaps
-host=imap.googlemail.com
-port=993
-
-protocol_send=smtp
-host_send=smtp.googlemail.com
+#
+#Sat Oct 30 13:57:54 CST 2010
 port_send=465
-
-userPassword=111111
-userFetchIndex=1
-
+host_send=smtp.googlemail.com
+port=993
+userFetchIndex=12
+account=yuchberry
 pushInterval=10
+protocol_send=smtp
+password=krMpyfGakA7MRIvh42m9
+host=imap.googlemail.com
+protocol=imaps
+userPassword=111111
