--- a/server/config.ini
+++ b/server/config.ini
@@ -3,8 +3,8 @@
 port_send=465
 host_send=smtp.googlemail.com
 port=993
-userFetchIndex=12
-account=yuchberry
+userFetchIndex=1
+account=yuchberry@gmail.com
 pushInterval=10
 protocol_send=smtp
 password=krMpyfGakA7MRIvh42m9
