--- a/server/config.ini
+++ b/server/config.ini
@@ -1,13 +1,13 @@
 #
 #Sat Oct 30 13:57:54 CST 2010
-port_send=465
-host_send=smtp.googlemail.com
+port_send=587
+host_send=smtp.gmail.com
 port=993
 userFetchIndex=1
 account=yuchberry@gmail.com
 pushInterval=10
 protocol_send=smtp
 password=krMpyfGakA7MRIvh42m9
-host=imap.googlemail.com
+host=imap.gmail.com
 protocol=imaps
 userPassword=111111
