--- a/server/.classpath
+++ b/server/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/javamail-1.4.3/mail.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/HTMLParser-2.0-SNAPSHOT/lib/htmllexer.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/HTMLParser-2.0-SNAPSHOT/lib/htmlparser.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
