--- a/server/config.ini
+++ b/server/config.ini
@@ -1,14 +1,52 @@
+# 服务器配置文件
 #
-#Wed Nov 24 13:58:41 CST 2010
-port_send=587
-host_send=smtp.gmail.com
-port=993
-userFetchIndex=193
+
+# 完整帐号名称
+#
 account=yuchberry@gmail.com
-pushInterval=10
-protocol_send=smtp
-password=krMpyfGakA7MRIvh42m9
+
+# 用于接收邮件的协议，有如下选择
+# pop3 pop3s imap imaps
+# 带s的是用于 SSL 安全链接
+#
 protocol=imaps
+
+# 邮箱主机地址，端口号，具体参考 邮件系统的帮助文件
+#
 host=imap.gmail.com
+port=993
+
+# 邮箱密码，收信和发信都是用它
+#
+password=krMpyfGakA7MRIvh42m9
+
+
+# 发送邮件使用的协议，几乎都是smtp
+#
+protocol_send=smtp
+
+# 发送邮件的主机地址和端口
+#
+host_send=smtp.gmail.com
+port_send=587
+
+
+# 邮箱取信取到第几封信件了，这个是程序自动读取、写入
+# 不用手工更改
+#
+userFetchIndex=193
+
+# yuchBerry服务器取信间隔，单位为秒，间隔越小，花费的带宽越多
+# 但是Push 到客户端的延迟也就越小
+#
+pushInterval=10
+
+
+# 用户密码，这个需要和客户端填写的一致，
+# 如果使用SSL的话，生成 keystore 输入的密码也必须是这个。
+#
 userPassword=111111
+
+# 服务器是否使用SSL 进行加密。
+#
 userSSL=1
