--- a/server/config.ini
+++ b/server/config.ini
@@ -5,9 +5,10 @@
 #
 account=yuchberry@gmail.com
 
-# 用于接收邮件的协议，有如下选择
-# pop3 pop3s imap imaps
-# 带s的是用于 SSL 安全链接
+# 用于接收邮件的协议，
+# 有如下选择 pop3 pop3s imap imaps
+# 带s的是用于 SSL 安全链接 
+# 具体参考 邮件系统的帮助文件
 #
 protocol=imaps
 
@@ -22,13 +23,37 @@ password=krMpyfGakA7MRIvh42m9
 
 
 # 发送邮件使用的协议，几乎都是smtp
+# 具体参考 邮件系统的帮助文件
 #
 protocol_send=smtp
 
 # 发送邮件的主机地址和端口
+# 具体参考 邮件系统的帮助文件
 #
 host_send=smtp.gmail.com
 port_send=587
+
+# 用户密码
+# 这个需要和客户端填写的一致，
+# 如果使用SSL的话，生成 keystore 输入的密码也必须是这个。
+#
+userPassword=111111
+
+# yuchberry server 端口
+# 这个是服务器监听端口，负责与手机端通讯，推送服务器
+#
+serverPort=9716
+
+# yuchBerry服务器取信间隔
+# 单位为秒，间隔越小，花费的带宽越多
+# 但是Push 到客户端的延迟也就越小
+#
+pushInterval=10
+
+# 服务器是否使用SSL 进行加密。
+#
+userSSL=1
+
 
 
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
@@ -36,17 +61,4 @@ port_send=587
 #
 userFetchIndex=193
 
-# yuchBerry服务器取信间隔，单位为秒，间隔越小，花费的带宽越多
-# 但是Push 到客户端的延迟也就越小
-#
-pushInterval=10
 
-
-# 用户密码，这个需要和客户端填写的一致，
-# 如果使用SSL的话，生成 keystore 输入的密码也必须是这个。
-#
-userPassword=111111
-
-# 服务器是否使用SSL 进行加密。
-#
-userSSL=1
