--- a/server/config.ini
+++ b/server/config.ini
@@ -12,7 +12,7 @@ account=yuchberry@gmail.com
 #
 protocol=imaps
 
-# 邮箱主机地址，端口号，具体参考 邮件系统的帮助文件
+# 邮件服务主机地址，端口号，具体参考 邮件系统的帮助文件
 #
 host=imap.gmail.com
 port=993
@@ -39,7 +39,7 @@ port_send=587
 #
 userPassword=111111
 
-# yuchberry server 端口
+# yuchberry server 监听端口
 # 这个是服务器监听端口，负责与手机端通讯，推送服务器
 #
 serverPort=9716
