--- a/server/config.ini
+++ b/server/config.ini
@@ -51,14 +51,15 @@ serverPort=9716
 pushInterval=10
 
 # 服务器是否使用SSL 进行加密。
+# 1表示使用，0表示不使用
 #
-userSSL=1
+userSSL=0
 
 
 
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
 #
-userFetchIndex=193
+userFetchIndex=100
 
 
