--- a/server/config.ini
+++ b/server/config.ini
@@ -57,7 +57,10 @@ pushInterval=10
 #
 userSSL=0
 
-
+# 是否将服务器所有的字符串转换成简体
+# BB没有繁体支持
+#
+convertoSimpleChar=1
 
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
