--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -18,3 +18,12 @@ Gmail POP3 SSL,pop3s,pop.gmail.com,995,smtp.gmail.com,587
 126” œ‰IMAP,imap,imap.126.com,143,smtp.126.com,25
 126” œ‰POP3,pop3,pop.126.com,110,smtp.126.com,25
 
+# qq
+QQ ” œ‰ IMAP SSL,imaps,imap.qq.com,993,smtp.qq.com,587
+QQ ” œ‰ POP3,pop3,pop3,pop.qq.com,110,smtp.qq.com,25
+
+# ’Ê±≠æﬂ£¨±‰≥…alibaba¡À
+—≈ª¢” œ‰ POP3,pop3,pop.alibaba.com.cn,110,smtp.alibaba.com.cn,25
+
+# hotmail
+Hotmail POP3,pop3s,pop3.live.com,995,smtp.live.com,587
