--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -26,4 +26,16 @@ QQ ” œ‰ POP3,pop3,pop3,pop.qq.com,110,smtp.qq.com,25
 —≈ª¢” œ‰ POP3,pop3,pop.alibaba.com.cn,110,smtp.alibaba.com.cn,25
 
 # hotmail
-Hotmail POP3,pop3s,pop3.live.com,995,smtp.live.com,587
+Hotmail POP3 SSL,pop3s,pop3.live.com,995,smtp.live.com,587
+
+# –¬¿À
+–¬¿À” œ‰ POP3,pop3,pop.sina.com,110,smtp.sina.com,25
+
+# 139
+139 ” œ‰ POP3,pop3,pop.139.com,110,smtp.139.com,25
+
+# TOM
+TOM ” œ‰ POP3,pop3,pop.tom.com,110,smtp.tom.com,25
+
+#21 CN
+21CN ” œ‰ POP3,pop3,pop.21cn.com,110,smtp.21cn.com,25
