--- a/server/config.ini
+++ b/server/config.ini
@@ -5,7 +5,7 @@
 
 # 完整帐号名称
 #
-account=yuchberry@gmail.com
+account=87wazi@gmail.com
 
 # 用于接收邮件的协议，
 # 有如下选择 pop3 pop3s imap imaps
@@ -21,7 +21,7 @@ port=993
 
 # 邮箱密码，收信和发信都是用它
 #
-password=3jbZP3hMeb2hAW8t3h08
+password=aabbdd123
 
 
 # 发送邮件使用的协议，几乎都是smtp
@@ -39,12 +39,12 @@ port_send=587
 # 这个需要和客户端填写的一致，
 # 如果使用SSL的话，生成 keystore 输入的密码也必须是这个。
 #
-userPassword=111111
+userPassword=nvOuamhZ
 
 # yuchberry server 监听端口
 # 这个是服务器监听端口，负责与手机端通讯，推送服务器
 #
-serverPort=9716
+serverPort=9734
 
 # yuchBerry服务器取信间隔
 # 单位为秒，间隔越小，花费的带宽越多
@@ -65,6 +65,6 @@ convertoSimpleChar=0
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
 #
-userFetchIndex=814
+userFetchIndex=2
 
 
