--- a/server/config.ini
+++ b/server/config.ini
@@ -62,6 +62,13 @@ userSSL=0
 #
 convertoSimpleChar=0
 
+# 是否将HTML 转化成纯文本，并且跟随在正文的后面
+# 1表示启用，0表示不启用
+# 这个选项有点古怪，但是如果你邮箱订阅的有谷歌咨询，而且
+# 用手机的自带HTML查看器打不开手机浏览器的话，就会需要这个功能了。
+#
+appendHTML=0
+
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
 #
