--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -19,8 +19,8 @@ Gmail POP3 SSL,pop3s,pop.gmail.com,995,smtp.gmail.com,587
 126” œ‰POP3,pop3,pop.126.com,110,smtp.126.com,25
 
 # qq
-QQ ” œ‰ IMAP SSL,imaps,imap.qq.com,993,smtp.qq.com,587
 QQ ” œ‰ POP3,pop3,pop3,pop.qq.com,110,smtp.qq.com,25
+QQ ” œ‰ POP3 SSL,pop3s,pop3,pop.qq.com,995,smtp.qq.com,587
 
 # ’Ê±≠æﬂ£¨±‰≥…alibaba¡À
 —≈ª¢” œ‰ POP3,pop3,pop.alibaba.com.cn,110,smtp.alibaba.com.cn,25
