--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -19,7 +19,7 @@ Gmail POP3 SSL,pop3s,pop.gmail.com,995,smtp.gmail.com,587
 126” œ‰POP3,pop3,pop.126.com,110,smtp.126.com,25
 
 # qq
-QQ ” œ‰ POP3,pop3,pop3,pop.qq.com,110,smtp.qq.com,25
+QQ ” œ‰ POP3,pop3,pop.qq.com,110,smtp.qq.com,25
 QQ ” œ‰ POP3 SSL,pop3s,pop3,pop.qq.com,995,smtp.qq.com,587
 
 # ’Ê±≠æﬂ£¨±‰≥…alibaba¡À
