--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -20,7 +20,7 @@ Gmail POP3 SSL,pop3s,pop.gmail.com,995,smtp.gmail.com,587
 
 # qq
 QQ ” œ‰ POP3,pop3,pop.qq.com,110,smtp.qq.com,25
-QQ ” œ‰ POP3 SSL,pop3s,pop3,pop.qq.com,995,smtp.qq.com,587
+QQ ” œ‰ POP3 SSL,pop3s,pop.qq.com,995,smtp.qq.com,587
 
 # ’Ê±≠æﬂ£¨±‰≥…alibaba¡À
 —≈ª¢” œ‰ POP3,pop3,pop.alibaba.com.cn,110,smtp.alibaba.com.cn,25
@@ -30,6 +30,8 @@ Hotmail POP3 SSL,pop3s,pop3.live.com,995,smtp.live.com,587
 
 # –¬¿À
 –¬¿À” œ‰ POP3,pop3,pop.sina.com,110,smtp.sina.com,25
+–¬¿À” œ‰II IMAP,imap,imap.sina.cn,143,smtp.sina.cn,25
+–¬¿À” œ‰II POP3,pop3,pop.sina.cn,110,smtp.sina.cn,25
 
 # 139
 139 ” œ‰ POP3,pop3,pop.139.com,110,smtp.139.com,25
