--- a/server/config.ini
+++ b/server/config.ini
@@ -5,7 +5,7 @@
 
 # 完整帐号名称
 #
-account=yuchberry@gmail.com
+account=yuchting@gmail.com
 
 # 用于接收邮件的协议，
 # 有如下选择 pop3 pop3s imap imaps
@@ -21,7 +21,7 @@ port=993
 
 # 邮箱密码，收信和发信都是用它
 #
-password=3jbZP3hMeb2hAW8t3h08
+password=fullmental@@@
 
 
 # 发送邮件使用的协议，几乎都是smtp
@@ -60,7 +60,7 @@ userSSL=0
 # 是否将服务器所有的字符串转换成简体
 # BB没有繁体支持
 #
-convertoSimpleChar=0
+convertoSimpleChar=1
 
 # 是否将HTML 转化成纯文本，并且跟随在正文的后面
 # 1表示启用，0表示不启用
@@ -72,6 +72,6 @@ appendHTML=0
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
 #
-userFetchIndex=971
+userFetchIndex=6234
 
 
