--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -41,3 +41,6 @@ TOM ” œ‰ POP3,pop3,pop.tom.com,110,smtp.tom.com,25
 
 #21 CN
 21CN ” œ‰ POP3,pop3,pop.21cn.com,110,smtp.21cn.com,25
+
+#Foxmail
+Foxmail POP3,pop3,pop.foxmail.com,110,smtp.foxmail.com,25
