--- a/server/config.ini
+++ b/server/config.ini
@@ -5,23 +5,23 @@
 
 # 完整帐号名称
 #
-account=yuchting@gmail.com
+account=sales@gdgq.com
 
 # 用于接收邮件的协议，
 # 有如下选择 pop3 pop3s imap imaps
 # 带s的是用于 SSL 安全链接 
 # 具体参考 邮件系统的帮助文件
 #
-protocol=imaps
+protocol=pop3
 
 # 邮件服务主机地址，端口号，具体参考 邮件系统的帮助文件
 #
-host=imap.gmail.com
-port=993
+host=mail.gdgq.com
+port=110
 
 # 邮箱密码，收信和发信都是用它
 #
-password=fullmental@@@
+password=
 
 
 # 发送邮件使用的协议，几乎都是smtp
@@ -32,14 +32,14 @@ protocol_send=smtp
 # 发送邮件的主机地址和端口
 # 具体参考 邮件系统的帮助文件
 #
-host_send=smtp.gmail.com
-port_send=587
+host_send=mail.gdgq.com
+port_send=25
 
 # 用户密码
 # 这个需要和客户端填写的一致，
 # 如果使用SSL的话，生成 keystore 输入的密码也必须是这个。
 #
-userPassword=111111
+userPassword=123456
 
 # yuchberry server 监听端口
 # 这个是服务器监听端口，负责与手机端通讯，推送服务器
@@ -50,7 +50,7 @@ serverPort=9716
 # 单位为秒，间隔越小，花费的带宽越多
 # 但是Push 到客户端的延迟也就越小
 #
-pushInterval=10
+pushInterval=30
 
 # 服务器是否使用SSL 进行加密。
 # 1表示使用，0表示不使用
@@ -60,7 +60,7 @@ userSSL=0
 # 是否将服务器所有的字符串转换成简体
 # BB没有繁体支持
 #
-convertoSimpleChar=1
+convertoSimpleChar=0
 
 # 是否将HTML 转化成纯文本，并且跟随在正文的后面
 # 1表示启用，0表示不启用
@@ -72,6 +72,6 @@ appendHTML=0
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
 #
-userFetchIndex=6234
+userFetchIndex=0
 
 
