--- a/server/config.ini
+++ b/server/config.ini
@@ -5,19 +5,24 @@
 
 # 完整帐号名称
 #
-account=sales@gdgq.com
+account=yuchberry@hotmail.com
+
+# 登录时是否使用全部的帐号地址作为用户名
+# 如果是hotmail，可能会需要输入 yuchberry@hotmail.com 来进行登录
+#
+useFullNameSignIn=0
 
 # 用于接收邮件的协议，
 # 有如下选择 pop3 pop3s imap imaps
 # 带s的是用于 SSL 安全链接 
 # 具体参考 邮件系统的帮助文件
 #
-protocol=pop3
+protocol=pop3s
 
 # 邮件服务主机地址，端口号，具体参考 邮件系统的帮助文件
 #
-host=mail.gdgq.com
-port=110
+host=pop3.live.com
+port=995
 
 # 邮箱密码，收信和发信都是用它
 #
@@ -32,14 +37,14 @@ protocol_send=smtp
 # 发送邮件的主机地址和端口
 # 具体参考 邮件系统的帮助文件
 #
-host_send=mail.gdgq.com
-port_send=25
+host_send=smtp.live.com
+port_send=587
 
 # 用户密码
 # 这个需要和客户端填写的一致，
 # 如果使用SSL的话，生成 keystore 输入的密码也必须是这个。
 #
-userPassword=123456
+userPassword=111111
 
 # yuchberry server 监听端口
 # 这个是服务器监听端口，负责与手机端通讯，推送服务器
@@ -72,6 +77,6 @@ appendHTML=0
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
 #
-userFetchIndex=0
+userFetchIndex=1371
 
 
