--- a/server/config.ini
+++ b/server/config.ini
@@ -5,7 +5,7 @@
 
 # 完整帐号名称
 #
-account=yuchberry@hotmail.com
+account=yuchting@gmail.com
 
 # 登录时是否使用全部的帐号地址作为用户名
 # 如果是hotmail，可能会需要输入 yuchberry@hotmail.com 来进行登录
@@ -17,16 +17,16 @@ useFullNameSignIn=0
 # 带s的是用于 SSL 安全链接 
 # 具体参考 邮件系统的帮助文件
 #
-protocol=pop3s
+protocol=imaps
 
 # 邮件服务主机地址，端口号，具体参考 邮件系统的帮助文件
 #
-host=pop3.live.com
-port=995
+host=imap.gmail.com
+port=993
 
 # 邮箱密码，收信和发信都是用它
 #
-password=
+password=fullmental@@@
 
 
 # 发送邮件使用的协议，几乎都是smtp
@@ -37,7 +37,7 @@ protocol_send=smtp
 # 发送邮件的主机地址和端口
 # 具体参考 邮件系统的帮助文件
 #
-host_send=smtp.live.com
+host_send=smtp.gmail.com
 port_send=587
 
 # 用户密码
@@ -77,6 +77,6 @@ appendHTML=0
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
 #
-userFetchIndex=1371
+userFetchIndex=6340
 
 
