--- a/server/config.ini
+++ b/server/config.ini
@@ -5,7 +5,7 @@
 
 # 完整帐号名称
 #
-account=yuchting@gmail.com
+account=yuchberry@gmail.com
 
 # 登录时是否使用全部的帐号地址作为用户名
 # 如果是hotmail，可能会需要输入 yuchberry@hotmail.com 来进行登录
@@ -26,7 +26,7 @@ port=993
 
 # 邮箱密码，收信和发信都是用它
 #
-password=fullmental@@@
+password=aaaaa
 
 
 # 发送邮件使用的协议，几乎都是smtp
