--- a/server/config.ini
+++ b/server/config.ini
@@ -26,7 +26,7 @@ port=993
 
 # 邮箱密码，收信和发信都是用它
 #
-password=aaaaa
+password=dIaWFxxXIaYwZvAeWm2t
 
 
 # 发送邮件使用的协议，几乎都是smtp
@@ -77,6 +77,6 @@ appendHTML=0
 # 邮箱取信取到第几封信件了，这个是程序自动读取、写入
 # 不用手工更改
 #
-userFetchIndex=6340
+userFetchIndex=1495
 
 
