--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -1,46 +1,46 @@
-# ³£ÓÃµÄÓÊÏä·şÎñÆ÷ÅäÖÃÎÄ¼ş
-# ÓÃÓÚ¼¯³É¹ÜÀíÅäÖÃ£¬¸öÈË·şÎñÆ÷²»ÓÃ¹Ü
+ï»¿# å¸¸ç”¨çš„é‚®ç®±æœåŠ¡å™¨é…ç½®æ–‡ä»¶
+# ç”¨äºé›†æˆç®¡ç†é…ç½®ï¼Œä¸ªäººæœåŠ¡å™¨ä¸ç”¨ç®¡
 #  
-# ¸ñÊ½Îª
-# Ãû³Æ,Ğ­Òé,Ö÷»úµØÖ·,¶Ë¿Ú,·¢ËÍÖ÷»úµØÖ·,·¢ËÍ¶Ë¿Ú
+# æ ¼å¼ä¸º
+# åç§°,åè®®,ä¸»æœºåœ°å€,ç«¯å£,å‘é€ä¸»æœºåœ°å€,å‘é€ç«¯å£
 # 
-# ×Ô¶¨Òå£¬Óöµ½0ÁËÒÔºó£¬¾Í²»¸Ä±äÉ¶ÁË£¬¿ÉÒÔÃ»ÓĞÕâÒ»ĞĞ
-×Ô¶¨Òå,0,0,0,0,0
+# è‡ªå®šä¹‰ï¼Œé‡åˆ°0äº†ä»¥åï¼Œå°±ä¸æ”¹å˜å•¥äº†ï¼Œå¯ä»¥æ²¡æœ‰è¿™ä¸€è¡Œ
+è‡ªå®šä¹‰,0,0,0,0,0
 
 #gmail
 Gmail IMAP SSL,imaps,imap.gmail.com,993,smtp.gmail.com,587
 Gmail POP3 SSL,pop3s,pop.gmail.com,995,smtp.gmail.com,587
 
-# 163 µÄ
-163ÓÊÏäIMAP,imap,imap.163.com,143,smtp.163.com,25
-163ÓÊÏäPOP3,pop3,pop.163.com,110,smtp.163.com,25
+# 163 çš„
+163é‚®ç®±IMAP,imap,imap.163.com,143,smtp.163.com,25
+163é‚®ç®±POP3,pop3,pop.163.com,110,smtp.163.com,25
 
-126ÓÊÏäIMAP,imap,imap.126.com,143,smtp.126.com,25
-126ÓÊÏäPOP3,pop3,pop.126.com,110,smtp.126.com,25
+126é‚®ç®±IMAP,imap,imap.126.com,143,smtp.126.com,25
+126é‚®ç®±POP3,pop3,pop.126.com,110,smtp.126.com,25
 
 # qq
-QQ ÓÊÏä POP3,pop3,pop.qq.com,110,smtp.qq.com,25
-QQ ÓÊÏä POP3 SSL,pop3s,pop.qq.com,995,smtp.qq.com,587
+QQ é‚®ç®± POP3,pop3,pop.qq.com,110,smtp.qq.com,25
+QQ é‚®ç®± POP3 SSL,pop3s,pop.qq.com,995,smtp.qq.com,587
 
-# Õæ±­¾ß£¬±ä³ÉalibabaÁË
-ÑÅ»¢ÓÊÏä POP3,pop3,pop.alibaba.com.cn,110,smtp.alibaba.com.cn,25
+# çœŸæ¯å…·ï¼Œå˜æˆalibabaäº†
+é›…è™é‚®ç®± POP3,pop3,pop.alibaba.com.cn,110,smtp.alibaba.com.cn,25
 
 # hotmail
 Hotmail POP3 SSL,pop3s,pop3.live.com,995,smtp.live.com,587
 
-# ĞÂÀË
-ĞÂÀËÓÊÏä POP3,pop3,pop.sina.com,110,smtp.sina.com,25
-ĞÂÀËÓÊÏäII IMAP,imap,imap.sina.cn,143,smtp.sina.cn,25
-ĞÂÀËÓÊÏäII POP3,pop3,pop.sina.cn,110,smtp.sina.cn,25
+# æ–°æµª
+æ–°æµªé‚®ç®± POP3,pop3,pop.sina.com,110,smtp.sina.com,25
+æ–°æµªé‚®ç®±II IMAP,imap,imap.sina.cn,143,smtp.sina.cn,25
+æ–°æµªé‚®ç®±II POP3,pop3,pop.sina.cn,110,smtp.sina.cn,25
 
 # 139
-139 ÓÊÏä POP3,pop3,pop.139.com,110,smtp.139.com,25
+139 é‚®ç®± POP3,pop3,pop.139.com,110,smtp.139.com,25
 
 # TOM
-TOM ÓÊÏä POP3,pop3,pop.tom.com,110,smtp.tom.com,25
+TOM é‚®ç®± POP3,pop3,pop.tom.com,110,smtp.tom.com,25
 
 #21 CN
-21CN ÓÊÏä POP3,pop3,pop.21cn.com,110,smtp.21cn.com,25
+21CN é‚®ç®± POP3,pop3,pop.21cn.com,110,smtp.21cn.com,25
 
 #Foxmail
 Foxmail POP3,pop3,pop.foxmail.com,110,smtp.foxmail.com,25
