--- a/server/.classpath
+++ b/server/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="D:/eclipse/plugins/javamail-1.4.3/mail.jar"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/HTMLParser-2.0-SNAPSHOT/lib/htmllexer.jar"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/HTMLParser-2.0-SNAPSHOT/lib/htmlparser.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/dom4j-1.6.1/dom4j-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
