--- a/yuchsign/.settings/com.google.gdt.eclipse.core.prefs
+++ b/yuchsign/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Mon Feb 21 19:15:32 CST 2011
+#Wed Mar 16 12:28:19 CST 2011
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=
 warSrcDir=war
 warSrcDirIsOutput=true
