--- a/yuchsign/.settings/com.google.gwt.eclipse.core.prefs
+++ b/yuchsign/.settings/com.google.gwt.eclipse.core.prefs
@@ -1,3 +1,4 @@
-#Mon Feb 21 19:15:34 CST 2011
+#Wed Mar 16 12:28:19 CST 2011
 eclipse.preferences.version=1
+entryPointModules=
 filesCopiedToWebInfLib=gwt-servlet.jar
