--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -43,4 +43,4 @@ TOM 邮箱 POP3,pop3,pop.tom.com,110,smtp.tom.com,25
 21CN 邮箱 POP3,pop3,pop.21cn.com,110,smtp.21cn.com,25
 
 #Foxmail
-Foxmail POP3,pop3,pop.foxmail.com,110,smtp.foxmail.com,25
+Foxmail POP3,pop3,pop.qq.com,110,smtp.qq.com,25
