--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -20,6 +20,7 @@ Gmail POP3 SSL,pop3s,pop.gmail.com,995,smtp.gmail.com,587
 
 # qq
 QQ 邮箱 POP3,pop3,pop.qq.com,110,smtp.qq.com,25
+QQ 邮箱 IMAP,imap,imap.qq.com,143,smtp.qq.com,25
 QQ 邮箱 POP3 SSL,pop3s,pop.qq.com,995,smtp.qq.com,587
 
 # 真杯具，变成alibaba了
@@ -34,6 +35,7 @@ Hotmail POP3 SSL,pop3s,pop3.live.com,995,smtp.live.com,587
 新浪邮箱II POP3,pop3,pop.sina.cn,110,smtp.sina.cn,25
 
 # 139
+139 邮箱 imap,imap,imap.139.com,143,smtp.139.com,25
 139 邮箱 POP3,pop3,pop.139.com,110,smtp.139.com,25
 
 # TOM
@@ -43,4 +45,5 @@ TOM 邮箱 POP3,pop3,pop.tom.com,110,smtp.tom.com,25
 21CN 邮箱 POP3,pop3,pop.21cn.com,110,smtp.21cn.com,25
 
 #Foxmail
-Foxmail POP3,pop3,pop.foxmail.com,110,smtp.foxmail.com,25
+Foxmail IMAP,imap,imap.qq.com,143,smtp.qq.com,25
+Foxmail POP3,pop3,pop.qq.com,110,smtp.qq.com,25
