--- a/server/.classpath
+++ b/server/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="D:/eclipse/plugins/weibo4j/lib/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/weibo4j/lib/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/weibo4j/lib/junit-4.1.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/twitter4j-2.2.2/lib/twitter4j-core-2.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
