--- a/server/.classpath
+++ b/server/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="**/.svn/*|Thumbs.db" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/HTMLParser-2.0-SNAPSHOT/lib/htmllexer.jar"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/HTMLParser-2.0-SNAPSHOT/lib/htmlparser.jar"/>
