--- a/yuchsign/.settings/com.google.gdt.eclipse.core.prefs
+++ b/yuchsign/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,6 @@
-#Wed Mar 16 12:28:19 CST 2011
+#Mon Aug 01 12:26:12 CST 2011
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
+launchConfigExternalUrlPrefix=
 warSrcDir=war
 warSrcDirIsOutput=true
