--- a/server/.classpath
+++ b/server/.classpath
@@ -11,5 +11,9 @@
 	<classpathentry kind="lib" path="D:/eclipse/plugins/weibo4j/lib/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/weibo4j/lib/junit-4.1.jar"/>
 	<classpathentry kind="lib" path="D:/eclipse/plugins/twitter4j-2.2.2/lib/twitter4j-core-2.2.2.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/smack_3_2_1/smack.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/smack_3_2_1/smackx.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/smack_3_2_1/smackx-debug.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/plugins/smack_3_2_1/smackx-jingle.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
