--- a/yuchdroid16/AndroidManifest.xml
+++ b/yuchdroid16/AndroidManifest.xml
@@ -13,6 +13,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MailListActivity"></activity>
+        <activity android:name=".GlobalDialog"
+        android:label="@string/app_name" android:theme="@style/Theme.Transparent"></activity>
         
 
     </application>
