--- a/yuchdroid16/AndroidManifest.xml
+++ b/yuchdroid16/AndroidManifest.xml
@@ -12,7 +12,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MailListActivity"></activity>
+        <activity android:name=".mail.MailListActivity"></activity>
         <activity android:name=".GlobalDialog"
         android:label="@string/app_name" android:theme="@style/Theme.Transparent"></activity>
         
