--- a/yuchdroid16/AndroidManifest.xml
+++ b/yuchdroid16/AndroidManifest.xml
@@ -39,11 +39,17 @@
         	android:label="Mail Subject"/>
         	
         <activity android:name=".mail.MailComposeActivity"
-        	android:label="Mail Compose"/>
+        	android:label="Mail Compose">        	
+        </activity>
         	
         <activity android:name=".ConnectPrefActivity"
         	android:label="@string/login_pref_title"/>
-        
+        	
+        <receiver android:name=".BootConnectRecv">  
+		    <intent-filter>  
+		        <action android:name="android.intent.action.BOOT_COMPLETED" />  
+		    </intent-filter>  
+		</receiver>		        
 
     </application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -51,4 +57,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.DEVICE_POWER" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> 
 </manifest>
