--- a/yuchdroid16/AndroidManifest.xml
+++ b/yuchdroid16/AndroidManifest.xml
@@ -10,23 +10,19 @@
         			
         <service android:name=".ConnectDeamon"/>
         
-        <activity android:name=".Yuchdroid16Activity"
-			android:label="@string/app_name"
-			android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        
         <activity android:name=".mail.HomeActivity" 
         	android:label="@string/title_mail" 
-        	android:icon="@drawable/mail_open_attachment_item_icon"
+        	android:icon="@drawable/icon"
         	android:launchMode="singleTop">
         	<intent-filter>
         		<action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity android:name=".Yuchdroid16Activity"
+			android:label="@string/app_name"
+			android:launchMode="singleTop">
         </activity>
         	        	
         <activity android:name=".DebugInfoActivity" 
