--- a/yuchdroid16/AndroidManifest.xml
+++ b/yuchdroid16/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         
         <activity android:name=".Yuchdroid16Activity"
-			android:label="@string/app_name"
+			android:label="@string/login_title_name"
 			android:launchMode="singleTop">
         </activity>
         	        	
