--- a/yuchdroid16/.classpath
+++ b/yuchdroid16/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry excluding="**/.svn/*" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="D:/eclipse/plugins/GoogleAdMobAdsSdkAndroid-4.3.1/GoogleAdMobAdsSdk-4.3.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="var" path="AdMob SDK"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
