--- a/server/commonMailSvr.ini
+++ b/server/commonMailSvr.ini
@@ -2,14 +2,15 @@
 # 用于集成管理配置，个人服务器不用管
 #  
 # 格式为
-# 名称,协议,主机地址,端口,发送主机地址,发送端口
+# 名称,协议,主机地址,端口,发送主机地址,发送端口,是否选择“使用全地址登陆”
 # 
 # 自定义，遇到0了以后，就不改变啥了，可以没有这一行
-自定义,0,0,0,0,0
+自定义,0,0,0,0,0,0
 
 #gmail
 Gmail IMAP SSL,imaps,imap.gmail.com,993,smtp.gmail.com,587
 Gmail POP3 SSL,pop3s,pop.gmail.com,995,smtp.gmail.com,587
+Google 企业,imaps,imap.gmail.com,993,smtp.gmail.com,587,1
 
 # 163 的
 163邮箱IMAP,imap,imap.163.com,143,smtp.163.com,25
@@ -22,6 +23,7 @@ Gmail POP3 SSL,pop3s,pop.gmail.com,995,smtp.gmail.com,587
 QQ 邮箱 IMAP,imap,imap.qq.com,143,smtp.qq.com,25
 QQ 邮箱 POP3,pop3,pop.qq.com,110,smtp.qq.com,25
 QQ 邮箱 POP3 SSL,pop3s,pop.qq.com,995,smtp.qq.com,587
+QQ 企业邮箱,imap,imap.exmail.qq.com,143,smtp.exmail.qq.com,25,1
 
 # 真杯具，变成alibaba了
 雅虎邮箱 POP3,pop3,pop.alibaba.com.cn,110,smtp.alibaba.com.cn,25
