--- a/client60/.classpath
+++ b/client60/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry excluding="**/.svn/*|Thumbs.db" kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/net.rim.ejde.BlackBerryVMInstallType/BlackBerry JRE 6.0.0"/>
 	<classpathentry excluding="**/.svn/*" kind="src" path=".locale_interfaces"/>
+	<classpathentry exported="true" kind="lib" path="lib/FlurryAgent.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
