--- a/yuchbox60/.project
+++ b/yuchbox60/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>client71</name>
+	<name>yuchbox60</name>
 	<comment></comment>
 	<projects>
 	</projects>
