--- a/server/build.xml
+++ b/server/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE project>
 <project name="SeaGameServer" default="build" basedir=".">
-	<property name="build" value="." />
+	<property name="build" value="./libs" />
 	<property name="libs" value="libs" />
 	<property name="src" value="src" />
 	<property name="classes" value="classes" />
